src/public/style/style.css
@font-face {
  font-family: radikal_regular;
  src: url("../fonts/radikal/radikal_regular.eot?") format("eot"), url("../fonts/radikal/radikal_regular.woff") format("woff"), url("../fonts/radikal/radikal_regular.svg#radikal_regular") format("svg"), url("../fonts/radikal/radikal_regular.ttf") format("truetype"); }

@font-face {
  font-family: radikal_bold;
  src: url("../fonts/radikal/radikal_bold.eot?") format("eot"), url("../fonts/radikal/radikal_bold.woff") format("woff"), url("../fonts/radikal/radikal_bold.svg#radikal_bold") format("svg"), url("../fonts/radikal/radikal_bold.ttf") format("truetype"); }

@font-face {
  font-family: radikal_light;
  src: url("../fonts/radikal/radikal_light.eot?") format("eot"), url("../fonts/radikal/radikal_light.woff") format("woff"), url("../fonts/radikal/radikal_light.svg#radikal_light") format("svg"), url("../fonts/radikal/radikal_light.ttf") format("truetype"); }

* {
  box-sizing: border-box; }

html, body {
  margin: 0;
  padding: 0;
  height: 100%; }

  
*{
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

html, body {
  float: left;
  width: 100%;
  margin: 0;
  padding: 0;
  color: #fff;
  font-family: 'Radikal_regular', Arial;
  font-weight: 300;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
  padding: 0;
}

header, footer {
  width: 100%;
  width: 100vw;

  padding: 0 16px;
  float: left;
  min-height: 50px;
  background: linear-gradient(to left, #2296D4 , #8283C9 );
  position: fixed;
  z-index: 99999999999999999999;
  line-height: 50px;
  color: #fff;
}

header {
  top: 0;
  height: 75px;
  line-height: 75px;
}

footer {
  bottom: 0;
}

aside {
  position: fixed;
  top: 75px;
  right: 0;
  height: calc(100% - 125px);
  z-index: 2;
  max-width: 200px;
  background: #fff;
  border-left: 1px solid #eff0f2;
}

aside ul {
  padding: 1em 8px;
  margin: 0;
  list-style: none;
}

aside ul li {
  display: inline-block;
  float: left;
  max-width: 20%;
  padding: 0 4px;
  display: block;
}

aside ul li img {
  max-width: 100%;
}
/* User infos */
.user_infos {
  max-width: 232px;
  float: right;
  height: 50px;
  margin-top: -50px;
  text-align:  left;
  width: 100%;
}
.user_infos .icon {
  float: left;
  line-height: 0; 
  margin: 0 -1em;
}
.user_infos #name {
  float: right;
  position: absolute;
  right: 16px;
  top: 50%;
  transform: translateY(-50%);
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  outline: none;
  min-width: 200px;
}

div#message {
  position: absolute;
  width: calc(100% - 200px);
  bottom: 0;
  border-top: 1px solid #eff0f2;
  left: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  resize: none;
  min-height: 50px;
  outline: none;
  padding: 1em 0;
  padding-left: 60px;
  background: white;
  color:#69778C;
  line-height: 1;
}
button#send {
  display: block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;

  right: 0;
  position: absolute;
  top: 0;
  min-width: 200px;
  height: 100%;
  background: linear-gradient(to left, #2296D4 , #8283C9 );
  font-size: 1.4em;
  color: #fff;
  display: block;
  border: none;
  cursor: pointer;
}

.user_avatar {
  position: absolute;
  left: 0;
  bottom: 0;
  z-index: 2;
  max-width: 50px;
  max-height: 50px;
    padding: 0;
}

.user_avatar img {
  max-width: 100%;
  padding: 10px;
  border-radius: 20px;
}
/* Zone message */
.chat-messages {
  position: absolute;
  height: 100%;
  height: 100vh;
  padding-top: 75px;
  padding-bottom: 50px;
  
  color: #000;
  width: calc(100% - 200px);
  float: left;
}

.chat-messages .messages_wrapper {
  float: left;
  position: relative;
  height: 100%;
  width: 100%;
  overflow: scroll;
  padding: 1em 2em;
}


/* Message style */
message {
  float: left;
  width: calc(100% + 4em);
  height: auto;

  border-top: 1px solid #eff0f2;
  border-bottom: 1px solid #eff0f2;
  line-height: 1;
  position: relative;
  margin-top: 8px;
  left: -2em;
}


message:after {
  display: block;
  content: '';
  position: absolute;
  left: 10%;
  height: 100%;
  width: 4px;
  background: #7f57cf;

}

message .user,
message .user_message {
  float: left;
}

message .user  {
  color: #fff;
  padding: 1em;
  position: relative;
  width: 10%;
}

message .user .-avatar {
  float: left;
  max-width: 32px;
  max-height: 32px;
  overflow: hidden;
  
  border-radius: 10px;
}

message .user .-avatar img  {
  width: 100%;
  border-radius: 10px;
}

message .user .-name {
  color: #568CCF;
}

message .user_message {
  padding-left: 1em;
  padding: 1em 2em;
  width: 90%;
  background: white;
}


message .user_message p {
  margin: 0;
  padding: 0;
  text-rendering: optimizeLegibility;
  white-space: pre-wrap;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;

  font-size: 14px;
  line-height: 24px;
  color: #69778C;

  font-family: 'radikal_regular';
  word-wrap: normal;
  -webkit-user-select: text;
    -webkit-font-smoothing: subpixel-antialiased;
}


/* A few icons */
.icon {
  display: inline-block;
  width: 28px;
  height: 28px;
}
.icon.icon-github {
  background: url(../img/github.svg)no-repeat center center / contain;
}
/* Some utils */
.avatar {
  border-radius: 10px;
}

